chore(readme): update

--- a/app/config/detekt.yml
+++ b/app/config/detekt.yml
@@ -35,6 +35,8 @@ complexity:
   LongMethod:
     active: true
     threshold: 60
+    ignoreAnnotated:
+      - "androidx.compose.runtime.Composable"
   TooManyFunctions:
     active: true
     thresholdInFiles: 20
